--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/auth.css"> -->
-    <link rel="icon" href="logo.ico" />
+    <!-- <link rel="icon" href="logo.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
